--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <span class="text-3xl text-[#E5734A]">🌱</span>
-                <h1 class="text-xl font-bold text-[#E5734A]">Project Kisan</h1>
+                <h1 class="text-xl font-bold text-[#E5734A]">Jai Kisan</h1>
             </div>
             <button id="voice-assistant-btn" class="p-2 rounded-full hover:bg-stone-200 focus:outline-none focus:ring-2 focus:ring-[#E5734A] focus:ring-offset-2">
                 <span class="text-2xl text-[#E5734A]">🎤</span>
